# nanocc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  VISITOR_PATTERN.md  asm.c  asm.s  asmgen.cpp  buildcc.sh  checker.cpp  codegen.cpp  irgen.cpp  lexer  lexer.cpp  main.cpp  nanocc  parser.cpp  test.cpp  test_complex.c  test_output  visitor_demo.cpp
.github/workflows/: README.md  test.yml
.images/: README.md  asm.md  computer_architecture.md  llvm.md
docs/: BuildGuide.md  CodingStandards.md  LLVMStyleImprovements.md  ProjectStructure.md  index.md
examples/: asm.c  asm.s  linkage_fact.c  linkage_fact.s  linkage_main.c  linkage_main.s  linkage_utils.c  linkage_utils.s  opt_constfold_unreach.c  opt_constfold_unreach.s
include/: asmgen.hpp  checker.hpp  codegen.hpp  example_visitors.hpp  helper.hpp  irgen.hpp  lexer.hpp  parser.hpp  utils.hpp
include/nanocc/: Utils.hpp
include/nanocc/AST/: AST.hpp
include/nanocc/Codegen/: ASM.hpp  IRToPseudoAsmPass.hpp
include/nanocc/IR/: BasicBlock.hpp  IR.hpp  IRDump.hpp
include/nanocc/Lexer/: Lexer.hpp
include/nanocc/Parser/: Parser.hpp
include/nanocc/Sema/: Sema.hpp
include/nanocc/Transforms/: Base.hpp  ConstantFolding.hpp  CopyPropagation.hpp  DeadStoreElimination.hpp  PassManager.hpp  SimplifyCFG.hpp
include/nanocc/Utils/: Operators.hpp  Utils.hpp
legacy/: CMakeLists.txt  asm.s  asmgen.cpp  buildcc.sh  checker.cpp  codegen.cpp  irgen.cpp  lexer.cpp  nanocc  nanocc.cpp  parser.cpp  test.cpp
legacy/include/: asmgen.hpp  checker.hpp  codegen.hpp  helper.hpp  irgen.hpp  lexer.hpp  parser.hpp  utils.hpp
lib/: CMakeLists.txt
lib/Codegen/: CMakeLists.txt  IRToPseudoAsmHelper.hpp  IRToPseudoAsmPass.cpp
lib/IR/: BasicBlock.cpp  CMakeLists.txt  IR.cpp  IRDump.cpp  IRGen.cpp  IRHelper.hpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Lexer/CAPI/: lexer.c  lexer.h  lexer_internal.h  regex.c  regex.h  tokens.def
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Sema/: CMakeLists.txt  Sema.cpp  SemaDecl.cpp  SemaHelper.hpp  SemaLabel.cpp  SemaType.cpp
lib/Transforms/: CMakeLists.txt  ConstantFolding.cpp  CopyPropagation.cpp  DeadStoreElimination.cpp  PassManager.cpp  SimplifyCFG.cpp
lib/Utils/: CMakeLists.txt  Utils.cpp
tools/: CMakeLists.txt  CompilerPipeline.hpp  NanoCC.cpp  nanocc.cpp  test_nanocc.cpp
tools/test/: README.txt  TestCommon.hpp  TestIR.cpp  TestLexer.cpp  TestParser.cpp  TestSema.cpp  TestX86AsmGen.cpp
unittests/: CMakeLists.txt  README.md
